[gd_scene load_steps=3 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Background.tscn" type="PackedScene" id=2]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="SolidBackground" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.168627, 0.364706, 0.14902, 0.486275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backgroud" parent="SolidBackground" instance=ExtResource( 2 )]

[node name="CenterContainer" type="CenterContainer" parent="SolidBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SolidBackground/CenterContainer"]
margin_left = 64.0
margin_top = 34.0
margin_right = 128.0
margin_bottom = 74.0

[node name="Fullscreen" type="Button" parent="SolidBackground/CenterContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 18.0
text = "Fullscreen"

[node name="Quit" type="Button" parent="SolidBackground/CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 64.0
margin_bottom = 40.0
text = "Quit"

[node name="Label" type="Label" parent="SolidBackground"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -18.0
margin_right = 56.0
text = "Fuzzyzilla 2021"
valign = 1

[node name="Label2" type="Label" parent="SolidBackground"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -58.0
margin_top = -18.0
text = "MiniJam 76"
align = 2
valign = 1
[connection signal="pressed" from="SolidBackground/CenterContainer/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="SolidBackground/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
